day2/db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    app: db
spec:
  containers:
  - name: mariadb
    image: mariadb
    ports:
    - containerPort: 3306
