day2/front.yaml
apiVersion: v1
kind: Pod
metadata:
  name: front
  labels:
    app: frontend
spec: 
  containers:
  - name: web
    image: nginx
