day2/init-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-pod
spec:
  volumes:
  - name: www-data
    emptyDir: {}
  containers:
  - name: web
    image: nginx
    volumeMounts:
    - name: www-data
      mountPath: /usr/share/nginx/html
